Upgrade minimum Java version to 16 Added Java-doc to source code tree Renamed some utils and classes to better structure the project